--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,12 +2,15 @@
 	width:100%;
 	height:100%;
 	border:2px solid black;
+	background-color:navy;
 }
 #encabezado{
 	width: 100%;
 	height:15%;
 	border:2px solid black;
 	padding:15px;
+	background-color:black;
+	
 
 }
 #menu{
