--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,7 +2,6 @@
 	width:100%;
 	height:100%;
 	border:2px solid black;
-	background-color:navy;
 }
 #encabezado{
 	width: 100%;
@@ -17,6 +16,7 @@
 	width: 100%;
 	height:10%;
 	border:2px solid black;
+	background-color:
 }
 
 
